test/core/errors/parameterized_types_error/zs/parameter_used_as_offset_error.zs
package parameter_used_as_offset_error;

struct Holder
{
    uint32 offset;
};

struct Parameterized(uint32 param)
{
    uint32 array[param];
};

struct Container
{
    Holder holder;
holder.offset:
    Parameterized(holder.offset) parameterized;
};
